--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "sass": "^1.49.9",
     "scrollreveal": "^4.0.9",
-    "vue": "^3.2.31"
+    "vue": "^3.2.31",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
