--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.2",
     "vite": "^2.8.4"
+  },
+  "engines": {
+    "node": "^20.x"
   }
 }
